# pysymmpol

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  __init__.py  _coefficients.ipynb  _teste-codes.ipynb  _testes.ipynb  main.py  mypy.ini  pyHallLittlewood.ipynb  pySymmetric.ipynb  pyproject.toml  stneed.md
.github/workflows/: ci.yml  draft-pdf.yml
.mypy_cache/3.12/: __future__.data.sync-conflict-20250920-081820-B4DKVSV.json  __future__.meta.sync-conflict-20250920-081857-B4DKVSV.json  _ast.data.sync-conflict-20250920-081903-B4DKVSV.json  _ast.meta.sync-conflict-20250920-081856-B4DKVSV.json  _bisect.data.sync-conflict-20250920-081855-B4DKVSV.json  _bisect.meta.sync-conflict-20250920-081837-B4DKVSV.json  _codecs.data.sync-conflict-20250920-081844-B4DKVSV.json  _codecs.meta.sync-conflict-20250920-081833-B4DKVSV.json  (+134 more)
docs/: CHANGELOG.md  citation.md  conf.py  getting-started.md  index.html  index.rst  modules.rst  pysymmpol.partitions.rst  pysymmpol.polynomials.rst  pysymmpol.rst  pysymmpol.utils.rst  tests.rst
paper/: paper.bib  paper.md
pysymmpol/: __init__.py  _monomial.py  conjugacy.py  elementary.py  hall.py  homogeneous.py  schur.py  states.py  young.py
src/: main.py  pySymmetric.ipynb
tests/: schur_test.py  test_hall_littlewood.py  test_homogeneous_elementary.py  test_monomial.py  test_states.py  test_young.py  young_test.py
tutorial/: 01-yang-diagrams.ipynb  02-conjugacy-class.ipynb  03-states.ipynb  04-complete-homogeneous.ipynb  05-elementary.ipynb  06-schur.ipynb  07-monomial-symmetric.ipynb  08-hall-littlewood.ipynb
(+1525 files in other folders)
